--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,11 +26,12 @@
 					<h3><i class="fa fa-wrench"></i> Current Work Info</h3>
 
 					<div ng-controller="RewardCtrl" class="table-responsive" id="reward_tbl">
+					
 						<table  class="table table-hover table-striped">
 							<thead>
 								<tr>
-									<th><span class="label label-warning" style="margin-right:5px;" ng-show="myData.length == 0"><i class="fa fa-spinner fa-spin"></i> Loading...</span><i class="fa fa-money"></i> <abbr id="reward_pop"
-										title="Reward Calculation"
+									<th><span class="label label-warning" style="margin-right:5px;" ng-show="myData.length == 0"><i class="fa fa-spinner fa-spin"></i> Loading...</span><i class="fa fa-money"></i> 
+									<abbr id="reward_pop" title="Reward Calculation"
 										data-content="User rewards in round is calculated as: (25 BTC + block fees - 2% fee) * (shares found by user's workers) / (total shares in current round)">Reward</abbr></th>
 									<th>Confirmed</th>
 									<th>Unconfirmed</th>
@@ -171,7 +172,10 @@
 						<table class="table table-hover table-striped">
 							<thead>
 								<tr>
-									<th><span class="label label-warning" style="margin-right:5px;" ng-show="myData.length == 0"><i class="fa fa-spinner fa-spin"></i> Loading...</span><i class="fa fa-exchange"></i> Transactions</th>
+									<th><span class="label label-warning" style="margin-right:5px;" ng-show="myData.length == 0"><i class="fa fa-spinner fa-spin"></i> Loading...</span><i class="fa fa-exchange"></i> 
+									<abbr id="transactions_pop" title="Transactions"
+										data-content="Incomming transactions is from mining work. Outgoing transactions is rewards to lazy miners. Frirst incomming transaction whas recived 2013-12-03">Transactions</abbr>
+									</th>
 									<th></th>
 									<th></th>
 									<th></th>
@@ -321,8 +325,7 @@
 		<script data-lift="FoBo.Bs3Comp.tooltip?id=.estimated_tip"></script>
 		<script data-lift="FoBo.Bs3Comp.tooltip?id=.accum_tip"></script>
 
-		<script
-			data-lift="FoBo.Bs3Comp.tooltip?id=.wallet_no_transactions_tip"></script>
+		<script data-lift="FoBo.Bs3Comp.tooltip?id=.wallet_no_transactions_tip"></script>
 		<script data-lift="FoBo.Bs3Comp.tooltip?id=.wallet_total_received_tip"></script>
 		<script data-lift="FoBo.Bs3Comp.tooltip?id=.wallet_final_balance_tip"></script>
 		<script data-lift="FoBo.Bs3Comp.tooltip?id=.wallet_forward_split_tip"></script>
@@ -335,8 +338,8 @@
 		<script data-lift="FoBo.Bs3Comp.tooltip?id=.kapiton_ticker_moavg_tip"></script>
 		<script data-lift="FoBo.Bs3Comp.tooltip?id=.kapiton_ticker_movol_tip"></script>
 
-		<script
-			data-lift="FoBo.Bs3Comp.popover?id=#reward_pop&options=placement:'auto top',trigger:'hover'"></script>
+		<script data-lift="FoBo.Bs3Comp.popover?id=#reward_pop&options=placement:'auto top',trigger:'hover'"></script>
+		<script data-lift="FoBo.Bs3Comp.popover?id=#transactions_pop&options=placement:'auto top',trigger:'hover'"></script>
 
         <span data-lift="RoundTripInjector"> This snippet injects the roundtrip binding scripts</span>
 	</div>
