--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -6,6 +6,7 @@
 <meta name="description" content="" />
 <meta name="keywords" content="" />
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
+<link type="image/x-icon" href="/assets/images/mobile_device_128x128.png" rel="shortcut icon">
 
 <title class="lift:Menu.title">BTC Stat:</title>
 
@@ -33,7 +34,9 @@
 	type="text/javascript"></script>
 <script src="/classpath/fobo/ng-grid.js" type="text/javascript"></script>
 
+<!-- Application specific angular scripts -->
 <script src="/assets/js/app.js" type="text/javascript"></script>
+<script src="/assets/js/services/pageTitle.js" type="text/javascript"></script>
 <script src="/assets/js/controllers/rewardCtrl.js" type="text/javascript"></script>
 <script src="/assets/js/controllers/walletCtrl.js" type="text/javascript"></script>
 <script src="/assets/js/controllers/slushPoolStatCtrl.js" type="text/javascript"></script>
