Adding png icon.

--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -6,7 +6,8 @@
 <meta name="description" content="" />
 <meta name="keywords" content="" />
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
-<link type="image/x-icon" href="/assets/images/mobile_device_128x128.png" rel="shortcut icon">
+<!-- <link type="image/x-icon" href="/assets/images/mobile_device_128x128.png" rel="shortcut icon"> -->
+<link type="image/x-icon" href="/assets/images/120px-Bitcoin_icon.png" rel="shortcut icon">
 
 <title class="lift:Menu.title">BTC Stat:</title>
 
