--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -38,6 +38,7 @@
 <!-- Application specific angular scripts -->
 <script src="/assets/js/app.js" type="text/javascript"></script>
 <script src="/assets/js/services/pageTitle.js" type="text/javascript"></script>
+<script src="/assets/js/controllers/serverDateTimeCtrl.js" type="text/javascript"></script>
 <script src="/assets/js/controllers/rewardCtrl.js" type="text/javascript"></script>
 <script src="/assets/js/controllers/walletCtrl.js" type="text/javascript"></script>
 <script src="/assets/js/controllers/slushPoolStatCtrl.js" type="text/javascript"></script>
