--- a/src/main/webapp/templates-hidden/_embeddedTopNavbar.html
+++ b/src/main/webapp/templates-hidden/_embeddedTopNavbar.html
@@ -19,8 +19,9 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand alt" href="#">
-     BTC Stat<img alt="" id="ajax-loader" style="display:none; margin-bottom: 0px; margin-left: 5px" src="/assets/images/ajax-loader.gif"></a>
+           
+    <a class="navbar-brand alt" href="#"><img alt="" id="ajax-loader" style="display:none; margin-bottom: 0px; margin-left: 5px" src="/assets/images/ajax-loader.gif">
+    BTC Stat</a>
   </div>
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
