Some text changes.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -37,8 +37,8 @@
           
           <div class="bs-callout bs-callout-info" >
             <h4><i class="fa fa-exclamation-triangle fa-2x"></i> Hidden values!</h4>
-            <p>As you are <strong>not authentication</strong> some mildly sensitive information will be filtered and 
-              marked as hidden.</p>
+            <p>As you are <strong>not logged in</strong> some mildly sensitive information has be filtered and 
+              marked as hidden. To login use the login form on this page.</p>
           </div>          
                   
         </div>	
