Changing BTC to ISO name XBT.

--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -9,7 +9,7 @@
 <!-- <link type="image/x-icon" href="/assets/images/mobile_device_128x128.png" rel="shortcut icon"> -->
 <link type="image/x-icon" href="/assets/images/120px-Bitcoin_icon.png" rel="shortcut icon">
 
-<title class="lift:Menu.title">BTC Stat:</title>
+<title class="lift:Menu.title">XBT Stat:</title>
 
 <link href="/classpath/fobo/pace-theme-minimal.css" rel="stylesheet" />
 <script data-pace-options='{ "restartOnPushState": false, "restartOnRequestAfter": false }' src="/classpath/fobo/pace.js"></script>
