--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -30,7 +30,7 @@
 <script src="/classpath/fobo/jquery.js" id="jquery"
 	type="text/javascript"></script>
 <script src="/classpath/fobo/angular.js" type="text/javascript"></script>
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.2/angular-animate.js"></script>
+<!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.2/angular-animate.js"></script> -->
 <script src="/classpath/fobo/ui-bootstrap-tpls.js"
 	type="text/javascript"></script>
 <script src="/classpath/fobo/ng-grid.js" type="text/javascript"></script>
@@ -45,7 +45,10 @@
 <script src="/assets/js/controllers/slushPoolStatCtrl.js" type="text/javascript"></script>
 <script src="/assets/js/controllers/kapitonCtrl.js" type="text/javascript"></script>
 
+
 <script id="json" src="/classpath/json.js" type="text/javascript"></script>
+
+
 
 </head>
 <body ng-app="btcStatApp">
